updates to rollup config css for dev and build tasks
modular css added.  css sourcemaps work.

--- a/src/App/style.css
+++ b/src/App/style.css
@@ -1,7 +1,7 @@
 body {
   background-color: floralwhite;
+}
 
-  h1 {
-    background-color: darkgray;
-  }
+.headline {
+  background-color: darkgrey;
 }
