left and right navigation buttons
You can now navigate left and right.  No boundary checks yet.

--- a/src/App/style.css
+++ b/src/App/style.css
@@ -7,5 +7,9 @@ body {
 }
 
 .slider {
-  max-width: 600px;  
+  max-width: 600px;
+
+  & :global .slider__inner {
+    transition: margin-left 300ms;
+  }
 }
