props.onClick is now a callback back, next, and dot buttons
if an optional onClick prop is supplied to our back, next, or dot buttons, it is called as a callback after the store’s state has updated.

--- a/src/App/style.css
+++ b/src/App/style.css
@@ -9,7 +9,7 @@ body {
 .slider {
   max-width: 600px;
 
-  & :global .slider__inner {
+  & :global .carousel__slide-tray {
     transition: margin-left 300ms;
   }
 }
