--- a/src/Slider/slider.css
+++ b/src/Slider/slider.css
@@ -1,7 +1,7 @@
 .slider {
     overflow: hidden;
 
-    &Inner {
+    &Tray {
       width: 100%;
       overflow: hidden;
       background-color: red;
