vertical scrolling option complete
vertical scroll option now works.

--- a/src/Slide/slide.css
+++ b/src/Slide/slide.css
@@ -1,11 +1,14 @@
 .slide {
   display: block;
-  float: left;
   box-sizing: border-box;
   position: relative;
 
   &:focus {
     outline: none !important;
+  }
+
+  &Horizontal {
+    float: left;
   }
 }
 
