--- a/src/Slider/slider.css
+++ b/src/Slider/slider.css
@@ -21,6 +21,10 @@
   float: left;
 }
 
+.verticalSlideTrayWrap {
+  overflow: hidden;
+}
+
 .sliderTray {
   transition: transform 500ms;
   transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1.000); /* easeInOutCubic */
