--- a/src/Slide/slide.css
+++ b/src/Slide/slide.css
@@ -2,6 +2,7 @@
   position: relative;
   display: block;
   box-sizing: border-box;
+  height: 0;
 
   &:focus {
     outline: none !important;
@@ -9,6 +10,14 @@
 
   &Horizontal {
     float: left;
+  }
+
+  &Inner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 }
 
