changed default tags.  Added arrow events.
changed default Sider and Slide tags for aria compliance. Added left and right arrow events for aria compliance.  Updated tests

--- a/src/Slide/slide.css
+++ b/src/Slide/slide.css
@@ -3,6 +3,8 @@
   display: block;
   box-sizing: border-box;
   height: 0;
+  margin: 0;
+  list-style-type: none;
 
   &:focus {
     outline: none !important;
