better access to slider dom elements, animation.

--- a/src/Slider/slider.css
+++ b/src/Slider/slider.css
@@ -26,12 +26,15 @@
 }
 
 .sliderTray {
-  transition: transform 500ms;
-  transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1.000); /* easeInOutCubic */
   display: block;
   list-style: none;
   padding: 0;
   margin: 0;
+}
+
+.sliderAnimation {
+  transition: transform 500ms;
+  transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1.000); /* easeInOutCubic */
 }
 
 .masterSpinnerContainer {
