internal rtl support
relying on a global attribute selector feels a bit hacky

--- a/src/Slide/Slide.scss
+++ b/src/Slide/Slide.scss
@@ -12,6 +12,13 @@
 
   &Horizontal {
     float: left;
+
+    [dir='rtl'] & {
+      > * {
+        direction: rtl;
+        transform: scaleX(-1);
+      }
+    }
   }
 
   &Inner {
