fix: RTL support (#267)
* add RTL example

* add quickfix

makes the carousel functional, but just via overriding the direction

* internal rtl support

relying on a global attribute selector feels a bit hacky

* fix import

* simplify style

* include dot group in rtl example for demonstration purposes

* lint

--- a/src/Slide/Slide.scss
+++ b/src/Slide/Slide.scss
@@ -12,6 +12,11 @@
 
   &Horizontal {
     float: left;
+
+    [dir='rtl'] & {
+      direction: rtl;
+      transform: scaleX(-1);
+    }
   }
 
   &Inner {
